<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#534622">

    <TextView
        android:id="@+id/text_converter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/convert_amounts"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ingredient_name_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/ingredient_name"
        android:textColorHint="#CCCCCC"
        app:hintEnabled="true"
        app:hintTextColor="#CCCCCC"
        app:layout_constraintEnd_toStartOf="@+id/source_amount_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_converter">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ingredient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#ffffff" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/source_amount_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/source_amount"
        android:textColorHint="#CCCCCC"
        app:hintEnabled="true"
        app:hintTextColor="#CCCCCC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ingredient_name_container"
        app:layout_constraintTop_toBottomOf="@+id/text_converter">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/source_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="#ffffff" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/source_unit_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/source_unit"
        android:textColorHint="#CCCCCC"
        app:hintEnabled="true"
        app:hintTextColor="#CCCCCC"
        app:layout_constraintEnd_toStartOf="@+id/target_unit_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_name_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/source_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#ffffff" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/target_unit_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/target_unit"
        android:textColorHint="#CCCCCC"
        app:hintEnabled="true"
        app:hintTextColor="#CCCCCC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/source_unit_container"
        app:layout_constraintTop_toBottomOf="@+id/source_amount_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/target_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#ffffff" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/target_unit_container" />

    <Button
        android:id="@+id/btn_calc"
        android:layout_width="92dp"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_bd"
        android:text="@string/calculate"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_result" />

    <ImageView
        android:id="@+id/image_view_vector"
        android:layout_width="80dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/source_unit_container" />

</androidx.constraintlayout.widget.ConstraintLayout>